--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,30 +91,10 @@ p {
     color: #ffffff;
 }
 
-/* {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
- {
-    margin-bottom: 32px;
-    color: #ffffff;
-} */
-
 .benefit-lead h3 , .benefit-brand h3 , .benefit-cost h3{
     margin-bottom: 10px;
     text-align: center;
 }
-
- /* {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
- {
-    margin-bottom: 10px;
-    text-align: center;
-} */
 
 .benefit-lead img {
     display: block;
@@ -161,29 +141,11 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+.search-engine-optimization img,  .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
